# VideoStickerBotFuckup

./: Miltilingualbot.code-workspace  README.md  azure-pipelines.yml  pyproject.toml  requirements-always-require.txt  requirements.txt  unrequirements.txt
.github/workflows/: azure-webapps-python-deploy.yml  azure-webapps-python.yml
C#/: Directory.Build.props  Directory.Build.targets  VideoStickerBotInCsharp.csproj  VideoStickerBotInCsharp.sln  bot.cs  settings.cs
C#/database/: __init__.cs  users_sql.cs
C#/plugins/: bot_api.cs  callbacks.cs  exceptions.cs
C#/pyromod-2.0.0/pyromod/helpers/: __init__.py
C#/pyromod-2.0.0/pyromod/listen/: __init__.py
C#/pyromod-2.0.0/pyromod/nav/: __init__.py
C#/pyromod2.2.0-C#/: README.md  __init__.cs  pyrogram2.0.0-C#.csproj  pyrogram2.0.0-C#.sln
C#/pyromod2.2.0-C#/helpers/: __init__.cs  helpers.cs
C#/pyromod2.2.0-C#/listen/: __init__.cs  listen.cs
C#/pyromod2.2.0-C#/nav/: __init__.py  pagination.cs
C#/pyromod2.2.0-C#/plugins/: helpers.cs  main.py
C#/pyromod2.2.0-C#/reflection-extensions/: ReflectionExtensions.cs
C#/pyromod2.2.0-C#/utils/: __init__.py  utils.cs
JavaScript/: serttings.js
Python/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements-always-require.txt  requirements.txt
Python/plugins/: bot_api.py
Python/scripts/: compose.sh  preprocess.env.sh  preprocessed.env.sh
plugins/: bot_api.py
