[build-system]
requires = ["setuptools", "setuptools-scm", "cython", "venv", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Video Sticker Bot"
authors = [
    {name = "Justin Chase", email = "justin@justinwritescode.com"},
]
description = "A video sticker bot to turn MP4s and GIfs into Telegram stickers."
requires-python = ">=3.11"
keywords = ["video", "stickers", "telegram", "bot"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "venv",
    "virtualenv"
]
dynamic = ["version"]
